--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ tonic-prost = ["dep:tonic-prost"]
 [dependencies]
 anyhow = { version = "1" }
 blake3 = "1.8.2"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
 thiserror = { version = "2.0.16" }
 tokio = { version = "1.47.1", features = ["full"] }
 
@@ -66,6 +66,18 @@ h2 = { version = "0.4", optional = true }
 tokio-rustls = { version = "0.26.1", optional = true, features = ["ring", "tls12"], default-features = false }
 hyper-rustls = { version = "0.27.0", features = ["http2", "ring", "tls12"], optional = true, default-features = false }
 tower-http = { version = "0.6", optional = true }
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
+dotenvy = "0.15.7"
+futures-core.workspace = true
+time = "0.3.44"
+futures-util = "0.3.31"
 
 [build-dependencies]
 tonic-prost-build = { version = "0.14.2" }
+
+[dev-dependencies]
+anvil = { path = "." }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tonic = { version = "0.14.2", features = ["transport"] }
+uuid = { version = "1.18.1", features = ["v4"] }
+tokio-stream = "0.1"
