--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,13 @@ futures-core.workspace = true
 time = "0.3.44"
 futures-util = "0.3.31"
 
+local-ip-address = "0.6.5"
+reqwest.workspace = true
+trust-dns-resolver = "0.23.2"
+async-trait.workspace = true
+libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tcp", "tokio", "macros", "noise", "yamux"] }
+
+
 [build-dependencies]
 tonic-prost-build = { version = "0.14.2" }
 
