Implement listing objects and fix a number of issues around region filtering

--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DATABASE_URL=postgres://worka:worka@localhost:5432/worka
-GLOBAL_DATABASE_URL=postgres://worka:worka@localhost:5432/worka
-DATABASE_URL_REGION_US_EAST_1=postgres://worka:worka@localhost:5432/worka
-DATABASE_URL_REGION_EU_WEST_1=postgres://worka:worka@localhost:5432/worka
-DATABASE_URL_REGION_SINGLE_TEST=postgres://worka:worka@localhost:5432/worka
+MAINTENANCE_DATABASE_URL="postgres://worka:worka@localhost:5432/postgres"
