--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ tonic-prost-build = { version = "0.14.2" }
 
 [dev-dependencies]
 anvil = { path = "." }
+# serial_test = "3.0.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 uuid = { version = "1.18.1", features = ["v4"] }
