Fix subtle bug where port obtained was being freed and OS would reallocate to a parallel test leading to port already in use. Now we pass the actual listener through so it never gets unbound in a test thereby eliminating the race condition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,6 +102,7 @@ tonic-prost-build = { version = "0.14.2" }
 anvil = { path = "." }
 # serial_test = "3.0.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+memchr = "2.7.6"
 
 uuid = { version = "1.18.1", features = ["v4"] }
 tokio-stream = "0.1"
