Fix various remaining bugs causing tests to fail

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ hex = "0.4.3"
 hmac = "0.12.1"
 axum-extra = { version = "0.10.2", features = ["typed-header"] }
 postgres-types = {version =  "0.2.10", features = ["derive"] }
+regex = "1.11.3"
 
 [build-dependencies]
 tonic-prost-build = { version = "0.14.2" }
