--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,6 +101,9 @@ regex = "1.11.3"
 tonic-prost-build = { version = "0.14.2" }
 
 [dev-dependencies]
+aws-config = "1.1.7"
+aws-sdk-s3 = "1.18.0"
+http-body-util = "0.1.1"
 anvil = { path = "." }
 # serial_test = "3.0.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
