Align S3 and native APIs to avoid differences in behaviour especially around auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,18 +51,18 @@ services:
       - REGION=DOCKER_TEST
       - JWT_SECRET=docker-test-secret
       - WORKA_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-      - HTTP_BIND_ADDR=0.0.0.0:9000
+      - HTTP_BIND_ADDR=0.0.0.0:50051
       - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7443/quic-v1
       - PUBLIC_ADDRS=/dns4/anvil1/udp/7443/quic-v1
-      - PUBLIC_GRPC_ADDR=http://anvil1:9001
+      - PUBLIC_GRPC_ADDR=http://anvil1:50051
       - ENABLE_MDNS=false
     command: ["anvil", "--init-cluster"]
     ports:
-      - "9001:9000"
+      - "50051:50051"
       - "7443:7443/udp"
     networks: [anvilnet]
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/"]
+      test: ["CMD", "curl", "-f", "http://localhost:9000/ready"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -79,14 +79,14 @@ services:
       - REGION=DOCKER_TEST
       - JWT_SECRET=docker-test-secret
       - WORKA_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-      - HTTP_BIND_ADDR=0.0.0.0:9000
+      - HTTP_BIND_ADDR=0.0.0.0:50051
       - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7444/quic-v1
       - PUBLIC_ADDRS=/dns4/anvil2/udp/7444/quic-v1
-      - PUBLIC_GRPC_ADDR=http://anvil2:9002
+      - PUBLIC_GRPC_ADDR=http://anvil2:50051
       - ENABLE_MDNS=false
       - BOOTSTRAP_ADDRS=/dns4/anvil1/udp/7443/quic-v1
     ports:
-      - "9002:9000"
+      - "50052:50051"
       - "7444:7443/udp"
     networks: [anvilnet]
 
@@ -102,14 +102,14 @@ services:
       - REGION=DOCKER_TEST
       - JWT_SECRET=docker-test-secret
       - WORKA_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-      - HTTP_BIND_ADDR=0.0.0.0:9000
+      - HTTP_BIND_ADDR=0.0.0.0:50051
       - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7445/quic-v1
       - PUBLIC_ADDRS=/dns4/anvil3/udp/7445/quic-v1
-      - PUBLIC_GRPC_ADDR=http://anvil3:9003
+      - PUBLIC_GRPC_ADDR=http://anvil3:50051
       - ENABLE_MDNS=false
       - BOOTSTRAP_ADDRS=/dns4/anvil1/udp/7443/quic-v1
     ports:
-      - "9003:9000"
+      - "50053:50051"
       - "7445:7443/udp"
     networks: [anvilnet]
 
