--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       - REGION=DOCKER_TEST
       - JWT_SECRET=docker-test-secret
       - WORKA_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+      - WORKA_CLUSTER_SECRET=docker-cluster-secret
       - HTTP_BIND_ADDR=0.0.0.0:9000
       - GRPC_BIND_ADDR=0.0.0.0:50051
       - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7443/quic-v1
@@ -81,6 +82,7 @@ services:
       - REGION=DOCKER_TEST
       - JWT_SECRET=docker-test-secret
       - WORKA_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+      - WORKA_CLUSTER_SECRET=docker-cluster-secret
       - HTTP_BIND_ADDR=0.0.0.0:9000
       - GRPC_BIND_ADDR=0.0.0.0:50052
       - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7444/quic-v1
@@ -106,6 +108,7 @@ services:
       - REGION=DOCKER_TEST
       - JWT_SECRET=docker-test-secret
       - WORKA_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+      - WORKA_CLUSTER_SECRET=docker-cluster-secret
       - HTTP_BIND_ADDR=0.0.0.0:9000
       - GRPC_BIND_ADDR=0.0.0.0:50053
       - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7445/quic-v1
