Add a command to reset app secret. Rename various env vars to have more sensible names and drop the unused http arg/env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,20 +52,18 @@ services:
       - JWT_SECRET=docker-test-secret
       - ANVIL_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       - ANVIL_CLUSTER_SECRET=docker-cluster-secret
-      - HTTP_BIND_ADDR=0.0.0.0:9000
-      - GRPC_BIND_ADDR=0.0.0.0:50051
-      - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7443/quic-v1
-      - PUBLIC_ADDRS=/dns4/anvil1/udp/7443/quic-v1
-      - PUBLIC_GRPC_ADDR=http://anvil1:50051
+      - API_LISTEN_ADDR=0.0.0.0:50051
+      - CLUSTER_LISTEN_ADDR=/ip4/0.0.0.0/udp/7443/quic-v1
+      - PUBLIC_CLUSTER_ADDRS=/dns4/anvil1/udp/7443/quic-v1
+      - PUBLIC_API_ADDR=http://anvil1:50051
       - ENABLE_MDNS=false
     command: ["anvil", "--init-cluster"]
     ports:
-      - "9000:9000"
       - "50051:50051"
       - "7443:7443/udp"
     networks: [anvilnet]
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/ready"]
+      test: ["CMD", "curl", "-f", "http://localhost:50051/ready"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -83,16 +81,14 @@ services:
       - JWT_SECRET=docker-test-secret
       - ANVIL_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       - ANVIL_CLUSTER_SECRET=docker-cluster-secret
-      - HTTP_BIND_ADDR=0.0.0.0:9000
-      - GRPC_BIND_ADDR=0.0.0.0:50052
-      - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7444/quic-v1
-      - PUBLIC_ADDRS=/dns4/anvil2/udp/7444/quic-v1
-      - PUBLIC_GRPC_ADDR=http://anvil2:50052
+      - API_LISTEN_ADDR=0.0.0.0:50051
+      - CLUSTER_LISTEN_ADDR=/ip4/0.0.0.0/udp/7444/quic-v1
+      - PUBLIC_CLUSTER_ADDRS=/dns4/anvil2/udp/7444/quic-v1
+      - PUBLIC_API_ADDR=http://anvil2:50051
       - ENABLE_MDNS=false
       - BOOTSTRAP_ADDRS=/dns4/anvil1/udp/7443/quic-v1
     ports:
-      - "9001:9000"
-      - "50052:50052"
+      - "50052:50051"
       - "7444:7443/udp"
     networks: [anvilnet]
 
@@ -109,16 +105,14 @@ services:
       - JWT_SECRET=docker-test-secret
       - ANVIL_SECRET_ENCRYPTION_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       - ANVIL_CLUSTER_SECRET=docker-cluster-secret
-      - HTTP_BIND_ADDR=0.0.0.0:9000
-      - GRPC_BIND_ADDR=0.0.0.0:50053
-      - QUIC_BIND_ADDR=/ip4/0.0.0.0/udp/7445/quic-v1
-      - PUBLIC_ADDRS=/dns4/anvil3/udp/7445/quic-v1
-      - PUBLIC_GRPC_ADDR=http://anvil3:50053
+      - API_LISTEN_ADDR=0.0.0.0:50051
+      - CLUSTER_LISTEN_ADDR=/ip4/0.0.0.0/udp/7445/quic-v1
+      - PUBLIC_CLUSTER_ADDRS=/dns4/anvil3/udp/7445/quic-v1
+      - PUBLIC_API_ADDR=http://anvil3:50051
       - ENABLE_MDNS=false
       - BOOTSTRAP_ADDRS=/dns4/anvil1/udp/7443/quic-v1
     ports:
-      - "9002:9000"
-      - "50053:50053"
+      - "50053:50051"
       - "7445:7443/udp"
     networks: [anvilnet]
 
