Switch to workspace setup so we can start splitting stuff out into sensible crates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,10 @@ jobs:
     - name: Run tests
       run: cargo test --workspace
 
+    - name: Build Linux Binaries
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      run: cargo build --release --target=x86_64-unknown-linux-gnu --bin anvil --bin admin
+
     - name: Extract metadata for Docker
       id: meta
       uses: docker/metadata-action@v5
