--- a/anvil/docker-compose.yml
+++ b/anvil/docker-compose.yml
@@ -38,7 +38,9 @@ services:
       retries: 5
 
   anvil1:
-    build: .
+    build:
+      context: ..
+      dockerfile: anvil/Dockerfile
     depends_on:
       postgres-global:
         condition: service_healthy
@@ -69,7 +71,9 @@ services:
       retries: 5
 
   anvil2:
-    build: .
+    build:
+      context: ..
+      dockerfile: anvil/Dockerfile
     depends_on:
       anvil1:
         condition: service_started
@@ -93,7 +97,9 @@ services:
     networks: [anvilnet]
 
   anvil3:
-    build: .
+    build:
+      context: ..
+      dockerfile: anvil/Dockerfile
     depends_on:
       anvil1:
         condition: service_started
