Add admin crate and parameterise the Dockerfile so we can set the loc of the binaries it includes. Imp[ortantly, this move now gets the binary built on the host instead of in the Docker builder which doesn't share the host's rust cache and should significantly speed up the build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,8 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64
+        build-args: |
+          BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
