--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Rust
-      if: env.SKIP_PACKS != 'true' && steps.pack_plan.outputs.needs_build == 'true'
       uses: dtolnay/rust-toolchain@stable
 
     - name: Install Protoc
@@ -56,15 +55,29 @@ jobs:
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+    - name: Run Unit & Integration Tests (non-Docker)
+      run: cargo test --workspace --exclude docker_cluster_test
+
+    - name: Install Linux Cross-Compilation Toolchain
+      run: sudo apt-get update && sudo apt-get install -y gcc-x86-64-linux-gnu
+
+    - name: Build Linux Binaries for Release
+      run: |
+        cargo build --release --target=x86_64-unknown-linux-gnu --bin anvil --bin admin
+        cargo build --release --target=x86_64-unknown-linux-gnu -p anvil-cli
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
+    - name: Build Docker Image for E2E Testing
+      uses: docker/build-push-action@v5
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        context: .
+        load: true # Load the image into the runner's docker daemon
+        push: false # Do not push yet
+        tags: anvil-ci-test-image:latest
+        build-args: |
+          BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -74,20 +87,33 @@ jobs:
         done
         echo "PostgreSQL is ready."
 
-    - name: Run tests
-      run: cargo test --workspace
+    - name: Run Docker E2E Test
+      run: cargo test --workspace --test docker_cluster_test -- --nocapture
 
-    - name: Build Linux Binaries
+    - name: Generate release tag
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: cargo build --release --target=x86_64-unknown-linux-gnu --bin anvil --bin admin
+      id: tag
+      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
+
+    - name: Log in to GitHub Container Registry
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Extract metadata for Docker
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ghcr.io/${{ github.repository }}
+        tags: |
+          type=raw,value=${{ steps.tag.outputs.tag_name }}
+          type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Build and push Docker image
+    - name: Build and Push Final Docker Image
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: docker/build-push-action@v5
       with:
@@ -101,11 +127,6 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-    - name: Generate release tag
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      id: tag
-      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
-
     - name: Create GitHub Release
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: softprops/action-gh-release@v1
@@ -118,13 +139,5 @@ jobs:
           You can pull the latest image using the following command:
 
           ```sh
-          docker pull ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.version }}
+          docker pull ghcr.io/${{ github.repository }}:${{ steps.tag.outputs.tag_name }}
           ```
-
-          To run the container:
-
-          ```sh
-          docker run -d -p 9000:9000 -p 7443:7443/udp ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.version }}
-          ```
-
-          ---
