--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,15 +69,39 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build Docker Image for E2E Testing
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Generate release tag
+      id: tag
+      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
+
+    - name: Extract metadata for Docker
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ghcr.io/${{ github.repository }}
+        tags: |
+          type=raw,value=${{ steps.tag.outputs.tag_name }},enable=${{ github.ref == 'refs/heads/main' }}
+          type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+
+    - name: Build and Load Docker Image
       uses: docker/build-push-action@v5
       with:
         context: .
-        load: true # Load the image into the runner's docker daemon
-        push: false # Do not push yet
-        tags: anvil-ci-test-image:latest
+        load: true
+        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
         build-args: |
           BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -88,44 +112,9 @@ jobs:
         echo "PostgreSQL is ready."
 
     - name: Run Docker E2E Test
+      env:
+        ANVIL_IMAGE: ghcr.io/${{ github.repository }}:latest
       run: cargo test --workspace --test docker_cluster_test -- --nocapture
-
-    - name: Generate release tag
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      id: tag
-      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
-
-    - name: Log in to GitHub Container Registry
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata for Docker
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ghcr.io/${{ github.repository }}
-        tags: |
-          type=raw,value=${{ steps.tag.outputs.tag_name }}
-          type=raw,value=latest,enable={{is_default_branch}}
-
-    - name: Build and Push Final Docker Image
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        platforms: linux/amd64,linux/arm64
-        build-args: |
-          BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
 
     - name: Create GitHub Release
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
