--- a/anvil/tests/docker-compose.test.yml
+++ b/anvil/tests/docker-compose.test.yml
@@ -41,6 +41,7 @@ services:
 
   anvil1:
     image: ${ANVIL_IMAGE}
+    pull_policy: if_not_present
     depends_on:
       postgres-global:
         condition: service_healthy
@@ -72,6 +73,7 @@ services:
 
   anvil2:
     image: ${ANVIL_IMAGE}
+    pull_policy: if_not_present
     depends_on:
       anvil1:
         condition: service_started
@@ -96,6 +98,7 @@ services:
 
   anvil3:
     image: ${ANVIL_IMAGE}
+    pull_policy: if_not_present
     depends_on:
       anvil1:
         condition: service_started
