--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,37 +70,15 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Generate release tag
-      id: tag
-      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
-
-    - name: Extract metadata for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ghcr.io/${{ github.repository }}
-        tags: |
-          type=raw,value=${{ steps.tag.outputs.tag_name }},enable=${{ github.ref == 'refs/heads/main' }}
-          type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-
-    - name: Build and Load Docker Image for Testing
+    - name: Build Local Docker Image for Testing
       uses: docker/build-push-action@v5
       with:
         context: .
         load: true # Load the image into the runner's docker daemon
-        push: false # Do not push this tag
-        tags: anvil:latest
+        push: false # Do not push this test-only tag
+        tags: anvil:test
         build-args: |
           BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -112,8 +90,45 @@ jobs:
 
     - name: Run Docker E2E Test
       env:
-        ANVIL_IMAGE: anvil:latest
+        ANVIL_IMAGE: anvil:test
       run: cargo test --workspace --test docker_cluster_test -- --nocapture
+
+    - name: Log in to GitHub Container Registry
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Generate release tag
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      id: tag
+      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
+
+    - name: Extract metadata for Docker
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ghcr.io/${{ github.repository }}
+        tags: |
+          type=raw,value=${{ steps.tag.outputs.tag_name }}
+          type=raw,value=latest,enable={{is_default_branch}}
+
+    - name: Build and Push Final Docker Image
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
+        build-args: |
+          BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: Create GitHub Release
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
