--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
     env:
       MAINTENANCE_DATABASE_URL: postgres://worka:worka@localhost:5432/worka
-      ANVIL_IMAGE: anvil:test
+      ANVIL_IMAGE: ghcr.io/${{ github.repository }}:latest
 
     steps:
     - name: Checkout repository
@@ -56,16 +56,14 @@ jobs:
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Run Unit & Integration Tests (non-Docker)
-      run: cargo test --workspace --exclude docker_cluster_test
+
+    - name: Generate release tag
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      id: tag
+      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
 
     - name: Install Linux Cross-Compilation Toolchain
       run: sudo apt-get update && sudo apt-get install -y gcc-x86-64-linux-gnu
-
-    - name: Build Linux Binaries for Release
-      run: |
-        cargo build --release --target=x86_64-unknown-linux-gnu --bin anvil --bin admin
-        cargo build --release --target=x86_64-unknown-linux-gnu -p anvil-cli
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -76,7 +74,7 @@ jobs:
         context: .
         load: true # Load the image into the runner's docker daemon
         push: false # Do not push this test-only tag
-        tags: anvil:test
+        tags: ghcr.io/${{ github.repository }}:${{ steps.tag.outputs.tag_name }}
         build-args: |
           BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
 
@@ -88,10 +86,13 @@ jobs:
         done
         echo "PostgreSQL is ready."
 
-    - name: Run Docker E2E Test
-      env:
-        ANVIL_IMAGE: anvil:test
-      run: cargo test --workspace --test docker_cluster_test -- --nocapture
+    - name: Run Unit & Integration Tests (non-Docker)
+      run: cargo test -- --nocapture
+
+    - name: Build Linux Binaries for Release
+      run: |
+        cargo build --release --target=x86_64-unknown-linux-gnu --bin anvil --bin admin
+        cargo build --release --target=x86_64-unknown-linux-gnu -p anvil-cli
 
     - name: Log in to GitHub Container Registry
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -100,11 +101,6 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Generate release tag
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      id: tag
-      run: echo "tag_name=v$(date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_OUTPUT
 
     - name: Extract metadata for Docker
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
