--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,11 +55,8 @@ jobs:
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Install Zigbuild
-      run: cargo install cargo-zigbuild
-
-    - name: Build Linux Binaries w/ Zigbuild
-      run: cargo zigbuild --release --target=x86_64-unknown-linux-gnu --workspace
+    - name: Build Release Binaries (Native Linux)
+      run: cargo build --release --workspace
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -74,7 +71,7 @@ jobs:
         tags: anvil:test
         platforms: linux/amd64
         build-args: |
-          BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
+          BINARY_PATH=./target/release
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -124,9 +121,9 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        platforms: linux/amd64 # For now, we only build and push one platform
+        platforms: linux/amd64
         build-args: |
-          BINARY_PATH=./target/x86_64-unknown-linux-gnu/release
+          BINARY_PATH=./target/release
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
