--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Compute test image tag
+      id: img
+      run: echo "tag=anvil:test-${GITHUB_RUN_ID}-${GITHUB_RUN_ATTEMPT}" >> $GITHUB_OUTPUT
+
     - name: Build Docker Image for Testing
       uses: docker/build-push-action@v5
       with:
@@ -68,10 +72,15 @@ jobs:
         file: anvil/Dockerfile
         load: true
         push: false
-        tags: anvil:test
+        tags: ${{ steps.img.outputs.tag }}
         platforms: linux/amd64
         build-args: |
           BINARY_PATH=./target/release
+
+    - name: Validate runtime binary in image
+      run: |
+        docker run --rm ${{ steps.img.outputs.tag }} ls -l /usr/local/bin
+        docker run --rm ${{ steps.img.outputs.tag }} /usr/local/bin/anvil --help >/dev/null
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -83,7 +92,7 @@ jobs:
 
     - name: Run All Tests
       env:
-        ANVIL_IMAGE: anvil:test
+        ANVIL_IMAGE: ${{ steps.img.outputs.tag }}
       run: cargo test --workspace -- --nocapture
 
     # --- Release Steps --- 
